Obtiene lista estatica desde servicios

--- a/src/app/lista-vehiculos/lista-vehiculos.component.html
+++ b/src/app/lista-vehiculos/lista-vehiculos.component.html
@@ -7,3 +7,13 @@
     <li *ngFor="let nombre of lista">{{nombre}}</li>
   </ol>
 </div>
+<div>
+  <table>
+    <thead>
+      <th>Placas</th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let v of listaVehiculos">{{v.placas}}</tr>
+    </tbody>
+  </table>
+</div>
