Detalle de vehiculo

--- a/src/app/lista-vehiculos/lista-vehiculos.component.html
+++ b/src/app/lista-vehiculos/lista-vehiculos.component.html
@@ -13,10 +13,14 @@
   <table>
     <thead>
       <th>Placas</th>
+      <th>Modelo</th>
+      <th></th>
     </thead>
     <tbody>
       <tr *ngFor="let v of listaVehiculos">
         <td>{{ v.placas }}</td>
+        <td>{{ v.marca }} / {{ v.modelo }}</td>
+        <td><a [routerLink]="v.placas">Ver detalle</a></td>
       </tr>
     </tbody>
   </table>
