Lista de clientes y ruta desde environment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -315,7 +315,8 @@
 
 <div class="content" role="main">
   <div>
-    <a href="vehiculos">Vehiculos</a>
+    <a href="vehiculos">Vehiculos</a> |
+    <a href="clientes">Clientes</a>
   </div>
 
 
