--- a/src/app/lista-vehiculos/lista-vehiculos.component.html
+++ b/src/app/lista-vehiculos/lista-vehiculos.component.html
@@ -10,6 +10,9 @@
 </div>
 -->
 <div>
+  <button [routerLink]="['create']">Agregar</button>
+</div>
+<div>
   <table>
     <thead>
       <th>Placas</th>
